--- a/index.html
+++ b/index.html
@@ -1338,9 +1338,9 @@
       <div class="activation-icon">🦅</div>
       <h2>DIGIY POS PRO</h2>
       <p>Bienvenue dans votre caisse connectée professionnelle.<br>Entrez votre code de licence pour activer.</p>
-      
-      <div class="license-input-group">
-        <input type="text" id="licenseCode" placeholder="DIGIY-XXXX-XXXX" maxlength="15">
+    
+    <div class="license-input-group">
+     <input type="text" id="licenseCode" placeholder="Colle ta licence DIGIY1..." autocomplete="off">
       </div>
 
       <div class="activation-actions">
