--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
     </div>
 </div>
-
+<script>
 // =============================
 // GUARD + SUPABASE INIT
 // =============================
