--- a/pin.html
+++ b/pin.html
@@ -4,15 +4,17 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
   <meta name="theme-color" content="#061b14"/>
-  <title>DIGIY QR PRO — Porte PIN</title>
+  <title>DIGIY — Porte PIN</title>
+
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
     :root{
       --bg:#061b14; --card:#0b2a1f; --line:rgba(255,255,255,.14);
       --text:#eafff1; --muted:rgba(234,255,241,.72);
-      --gold:#facc15; --ok:#22c55e; --bad:#fb7185;
-      --shadow:0 18px 55px rgba(0,0,0,.45); --r:18px;
+      --gold:#facc15; --ok:#22c55e; --bad:#fb7185; --cyan:#22d3ee;
+      --shadow:0 18px 55px rgba(0,0,0,.45);
     }
     *{box-sizing:border-box}
     body{
@@ -23,7 +25,7 @@
       color:var(--text); padding:18px;
     }
     .card{
-      width:min(520px,92vw);
+      width:min(560px,92vw);
       background:linear-gradient(145deg,rgba(11,42,31,.96),rgba(6,35,25,.96));
       border:1px solid var(--line);
       border-radius:22px;
@@ -46,9 +48,12 @@
       background:rgba(250,204,21,.10);
       padding:7px 10px;border-radius:999px;
       font-size:12px;font-weight:900;
+      white-space:nowrap;
     }
     .sep{height:1px;background:var(--line);margin:14px 0}
-    label{display:block;font-size:12px;color:var(--muted);margin:8px 0 6px}
+    .mini{margin-top:10px; font-size:12px; color:var(--muted); line-height:1.45}
+    .mini b{color:var(--text)}
+    label{display:block;font-size:12px;color:var(--muted);margin:10px 0 6px}
     input{
       width:100%; padding:14px 14px;
       border-radius:14px; border:1px solid var(--line);
@@ -56,19 +61,42 @@
       font-size:16px; font-weight:900; letter-spacing:.14em;
       outline:none;
     }
-    button{
+    input:focus{border-color:rgba(250,204,21,.6); box-shadow:0 0 0 3px rgba(250,204,21,.10)}
+    .btn{
       width:100%; margin-top:12px; padding:14px 14px;
       border-radius:14px; border:none;
       background:linear-gradient(90deg,var(--ok),var(--gold));
       color:#062015; font-weight:1000; font-size:15px;
       cursor:pointer;
     }
-    button:disabled{opacity:.6; cursor:not-allowed}
+    .btn:disabled{opacity:.6; cursor:not-allowed}
+    .btn.secondary{
+      background:rgba(255,255,255,.06);
+      color:var(--text);
+      border:1px solid rgba(255,255,255,.16);
+    }
+    .btn.cyan{
+      background:linear-gradient(135deg,var(--cyan),#60a5fa);
+      color:#04160f;
+      border:none;
+    }
+    .row{display:grid;gap:10px;margin-top:10px}
+    @media(min-width:520px){ .row{grid-template-columns:1fr 1fr} .row .span2{grid-column:span 2} }
     .msg{margin-top:12px;font-size:12px;color:var(--muted);line-height:1.5}
     .ok{color:var(--ok); font-weight:900}
     .bad{color:var(--bad); font-weight:900}
-    .mini{margin-top:10px; font-size:12px; color:var(--muted)}
-    .mini b{color:var(--text)}
+    .hint{
+      margin-top:10px;
+      padding:10px 12px;border-radius:14px;
+      border:1px solid rgba(34,197,94,.25);
+      background:rgba(34,197,94,.08);
+      color:#bbf7d0;
+      font-weight:850;
+      display:none;
+      white-space:pre-wrap;
+    }
+    .hint.show{display:block}
+    a.link{color:#fde68a;text-decoration:none;font-weight:900}
   </style>
 </head>
 
@@ -88,24 +116,34 @@
     <div class="sep"></div>
 
     <div class="mini">
-      SLUG : <b id="slugBox">—</b>
+      SLUG : <b id="slugBox">—</b><br>
+      MODE : <b id="modeBox">—</b>
     </div>
 
-    <label for="pin">Entre ton PIN</label>
-    <input id="pin" type="password" inputmode="numeric" autocomplete="one-time-code" placeholder="••••" maxlength="8"/>
+    <div id="pinBlock">
+      <label for="pin">Entre ton PIN</label>
+      <input id="pin" type="password" inputmode="numeric" autocomplete="one-time-code" placeholder="••••" maxlength="8"/>
+      <button class="btn" id="go">🚀 ENTRER</button>
+    </div>
 
-    <button id="go">🚀 ENTRER</button>
-
+    <div class="hint" id="hint"></div>
     <div class="msg" id="msg"></div>
+
+    <div class="row">
+      <button class="btn cyan" id="btnTrial" type="button">🎁 Essai 15 jours</button>
+      <button class="btn secondary" id="btnPay" type="button">🧾 Activer licence</button>
+      <button class="btn secondary span2" id="btnBack" type="button">← Retour</button>
+    </div>
   </div>
 
 <script>
 (async () => {
   // =========================
-  // ✅ MODULE QR PRO
+  // ✅ À RÉGLER PAR MODULE
   // =========================
-  const MODULE_CODE = "qr_pro";
-  const NEXT_URL    = "index.html";
+  const MODULE_CODE = "caisse_pro";   // ex: "loc_pro" | "pro_driver" | "caisse_pro" | "qr_pro" | "resto_pro" | "pay"
+  const NEXT_URL    = "index.html";   // ex: "planning.html" | "cockpit.html" | "index.html"
+  const PAY_URL     = "https://beauville.github.io/commencer-a-payer/"; // page paiement/activation
 
   // =========================
   // SUPABASE (TES CLÉS)
@@ -114,39 +152,96 @@
   const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indlc3Ftd2pqdHNlZnlqbmx1b3NqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUxNzg4ODIsImV4cCI6MjA4MDc1NDg4Mn0.dZfYOc2iL2_wRYL3zExZFsFSBK6AbMeOid2LrIjcTdA";
   const sb = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  const $ = (id)=>document.getElementById(id);
-  $("modPill").textContent = MODULE_CODE;
-  $("title").textContent = "PORTE PIN — " + MODULE_CODE.toUpperCase();
-
-  // slug depuis URL ?slug=
-  const url = new URL(location.href);
   // =========================
-// MODE DEMO 15 JOURS
-// =========================
-const trial = url.searchParams.get("trial"); // "1" = demo
-if(trial === "1"){
-  // pas de paiement, pas de pin
-  // on redirige vers l'index en mode demo
-  const next = new URL("index.html", location.href);
-  next.searchParams.set("trial","1");
-  location.replace(next.toString());
-  return;
-}
+  // UI
+  // =========================
+  const $ = (id)=>document.getElementById(id);
+  const url = new URL(location.href);
+
+  function setMsg(html){ $("msg").innerHTML = html || ""; }
+  function setHint(text){
+    $("hint").textContent = text || "";
+    $("hint").classList.toggle("show", !!text);
+  }
+
+  $("modPill").textContent = MODULE_CODE;
+  $("title").textContent = "PORTE — " + MODULE_CODE.toUpperCase();
+
   const slug = (url.searchParams.get("slug") || "").trim().toLowerCase();
-
+  const trial = url.searchParams.get("trial"); // "1" = demo
   $("slugBox").textContent = slug || "—";
-  $("subtitle").textContent = slug ? "Accès sécurisé — PIN requis" : "SLUG manquant";
 
-  const msg = (html)=>{ $("msg").innerHTML = html; };
-
-  if(!slug){
-    msg(`<span class="bad">❌ SLUG manquant.</span><br>Reviens depuis ton Espace PRO / QR Factory (lien avec ?slug=...).`);
-    $("go").disabled = true;
+  // =========================
+  // PAY : pas de PIN / pas de slug
+  // =========================
+  if(MODULE_CODE === "pay"){
+    $("modeBox").textContent = "PAY (sans PIN)";
+    $("subtitle").textContent = "Paiement & activation — sans PIN";
+    $("pinBlock").style.display = "none";
+    setHint("Ce module ne suit pas le moule PIN/SLUG.\nOn te redirige vers l’entrée PAY.");
+    setTimeout(()=>{
+      location.replace(NEXT_URL);
+    }, 700);
     return;
   }
 
-  setTimeout(()=>$("pin").focus(), 150);
+  // =========================
+  // MODE DEMO (trial=1) : entrée directe
+  // =========================
+  if(trial === "1"){
+    $("modeBox").textContent = "DEMO (trial=1)";
+    $("subtitle").textContent = "Mode démo — entrée directe";
+    $("pinBlock").style.display = "none";
+    setMsg(`<span class="ok">✅ Mode démo activé.</span> Ouverture…`);
+    setHint("Démo 15 jours : accès immédiat, fonctionnalités limitées selon le module.\nPour passer PRO : bouton “Activer licence”.");
+    const next = new URL(NEXT_URL, location.href);
+    next.searchParams.set("trial","1");
+    if(slug) next.searchParams.set("slug", slug); // optionnel
+    setTimeout(()=> location.replace(next.toString()), 450);
+    return;
+  }
 
+  // =========================
+  // MODE PRO : slug obligatoire
+  // =========================
+  $("modeBox").textContent = "PRO (PIN + slug)";
+  $("subtitle").textContent = slug ? "Accès sécurisé — PIN requis" : "SLUG manquant";
+
+  if(!slug){
+    setMsg(`<span class="bad">❌ SLUG manquant.</span><br>Entre via ton Espace PRO / QR Factory (lien avec <b>?slug=...</b>).`);
+    $("go").disabled = true;
+  } else {
+    setTimeout(()=>$("pin").focus(), 150);
+  }
+
+  // =========================
+  // Boutons bas
+  // =========================
+  $("btnTrial").addEventListener("click", ()=>{
+    const u = new URL(location.href);
+    u.searchParams.set("trial","1");
+    // garde slug si présent
+    if(slug) u.searchParams.set("slug", slug);
+    location.href = u.toString();
+  });
+
+  $("btnPay").addEventListener("click", ()=>{
+    // on peut passer des params si tu veux (produit/module)
+    const p = new URL(PAY_URL, location.href);
+    p.searchParams.set("module", MODULE_CODE);
+    if(slug) p.searchParams.set("slug", slug);
+    window.open(p.toString(), "_blank", "noopener");
+  });
+
+  $("btnBack").addEventListener("click", ()=>{
+    // retour simple : l'historique sinon fallback
+    if(history.length > 1) history.back();
+    else location.href = "https://beauville.github.io/espace-pro/";
+  });
+
+  // =========================
+  // Sessions
+  // =========================
   function saveSessions(payload){
     const session = {
       slug: payload.slug || slug,
@@ -156,7 +251,6 @@ if(trial === "1"){
       ts: Date.now()
     };
 
-    // ✅ session universelle (HUB)
     localStorage.setItem("DIGIY_ACCESS", JSON.stringify({
       slug: session.slug,
       phone: session.phone,
@@ -164,19 +258,21 @@ if(trial === "1"){
       ts: session.ts
     }));
 
-    // ✅ session module
     localStorage.setItem("DIGIY_SESSION_" + MODULE_CODE.toUpperCase(), JSON.stringify(session));
   }
 
+  // =========================
+  // Enter (PRO)
+  // =========================
   async function enter(){
-    const pin = $("pin").value.trim();
+    const pin = ($("pin").value || "").trim();
     if(pin.length < 3){
-      msg(`<span class="bad">❌ PIN invalide.</span>`);
+      setMsg(`<span class="bad">❌ PIN invalide.</span>`);
       return;
     }
-
     $("go").disabled = true;
-    msg(`Vérification en cours…`);
+    setMsg(`Vérification en cours…`);
+    setHint("");
 
     const { data, error } = await sb.rpc("digiy_verify_access", {
       p_slug: slug,
@@ -186,7 +282,7 @@ if(trial === "1"){
 
     if(error){
       $("go").disabled = false;
-      msg(`<span class="bad">❌ Erreur.</span><br>${String(error.message || error)}`);
+      setMsg(`<span class="bad">❌ Erreur.</span><br>${String(error.message || error)}`);
       return;
     }
 
@@ -194,19 +290,17 @@ if(trial === "1"){
       $("go").disabled = false;
 
       if(data?.reason === "module_inactive"){
-        msg(`<span class="bad">🔒 Module non actif.</span><br>
-             Ce module n’est pas encore activé pour ce pro.<br>
-             <span style="opacity:.85">Modules actifs: ${(data.modules_active||[]).join(", ")}</span>`);
+        setMsg(`<span class="bad">🔒 Module non actif.</span><br>Active ta licence puis reviens.`);
+        setHint("Modules actifs (si renvoyés par RPC) : " + ((data.modules_active||[]).join(", ") || "—"));
         return;
       }
 
-      msg(`<span class="bad">❌ Accès refusé.</span><br>PIN incorrect.`);
+      setMsg(`<span class="bad">❌ Accès refusé.</span><br>PIN incorrect.`);
       return;
     }
 
-    // ✅ OK
     saveSessions(data);
-    msg(`<span class="ok">✅ Accès validé.</span> Ouverture…`);
+    setMsg(`<span class="ok">✅ Accès validé.</span> Ouverture…`);
 
     setTimeout(()=>{
       const next = new URL(NEXT_URL, location.href);
@@ -216,9 +310,7 @@ if(trial === "1"){
   }
 
   $("go").addEventListener("click", enter);
-  $("pin").addEventListener("keydown", (e)=>{
-    if(e.key === "Enter") enter();
-  });
+  $("pin").addEventListener("keydown", (e)=>{ if(e.key === "Enter") enter(); });
 
 })();
 </script>
