--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <script src="./guard-pro.js?v=1"></script>  
   <title>DIGIY CAISSE PRO ♾️ — Royal Edition</title>
 
   <!-- Supabase -->
