--- a/dashboard-pro.html
+++ b/dashboard-pro.html
@@ -247,8 +247,8 @@
 /* =========================
    CONFIG — DIGIY MARKET
    ========================= */
-const MODULE_CODE = "CAISSE";
-const MODULE_LABEL = "DIGIY CAISSE";
+const MODULE_CODE = "POS";
+const MODULE_LABEL = "DIGIY POS";
 const PRIMARY_ACTION_LABEL = "Publier un produit";
 const PRIMARY_ACTION_HINT  = "Ajoute un produit ou gère tes commandes.";
 
