--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <script src="./guard-pro.js?v=1"></script>  
-  <title>DIGIY CAISSE PRO ♾️ — Royal Edition</title>
+  <title>DIGIY POS PRO ♾️ — Royal Edition</title>
 
   <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
